tests/snapshots/compile_file__var_shadows_ref.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/var_shadows_ref.hvm
---
@a = (a a)
@main = a
& @a ~ ((b b) a)

