tests/snapshots/compile_file__vicious_circles.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/vicious_circles.bend
---
[4m[1m[31mErrors:[0m
[1mIn compiled inet '[4mdisconnected_self_lam[0m[1m':[0m
  Found term that compiles into an inet with a vicious cycle
[1mIn compiled inet '[4mdup_self[0m[1m':[0m
  Found term that compiles into an inet with a vicious cycle
