tests/snapshots/compile_file__vicious_circles.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/vicious_circles.hvm
---
Errors:
In compiled inet 'disconnected_self_lam':
  Found term that compiles into an inet with a vicious cycle
In compiled inet 'dup_self':
  Found term that compiles into an inet with a vicious cycle

@main = (@dup_self @disconnected_self_lam)
