tests/snapshots/compile_file__warn_and_err.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/warn_and_err.bend
---
[4m[1m[33mWarnings:[0m
[1mIn [4mtests/golden_tests/compile_file/warn_and_err.bend[0m[1m :[0m
[1mIn definition '[4mFoo[0m[1m':[0m
  Repeated bind in pattern matching rule: 'a'.

[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file/warn_and_err.bend[0m[1m :[0m
[1mIn definition '[4mMain[0m[1m':[0m
  Unbound variable 'a'.
