tests/snapshots/compile_file__weekday.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/weekday.hvm
---
@9 = (b b)
@K = (b (* b))
@L = (* @K)
@M = (* @L)
@N = (* @M)
@O = (* @N)
@Satu = (* @O)
@main = b
& @9 ~ (@Satu b)

