tests/snapshots/compile_file__wrong_ctr_arity.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/wrong_ctr_arity.hvm
---
Errors:
In definition 'Bar':
  Incorrect arity for constructor 'Box' of type 'Boxed' in pattern matching rule. Expected 1 fields, found 2
