tests/snapshots/compile_file__wrong_ctr_var_arity.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/wrong_ctr_var_arity.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file/wrong_ctr_var_arity.bend[0m[1m :[0m
[1mIn definition '[4mfoo[0m[1m':[0m
  Incorrect arity for constructor 'Tup/pair' of type 'Tup' in pattern matching rule. Expected 2 fields, found 0
